--- a/imports/host/_dashboard.scss
+++ b/imports/host/_dashboard.scss
@@ -2,21 +2,21 @@
 // Dashboard
 
 .wizard-col {
-  @media screen and (min-width: 501px) {
+  @media screen and (min-width:1201px) {
     float: left;
     width: 32%;
   }
-  @media screen and (max-width:500px) {
+  @media screen and (max-width:1200px) {
     margin-bottom: 1.25em;
   }
   &.basic-setup {
-    @media screen and (min-width: 501px) {
+    @media screen and (min-width:1201px) {
       margin-right: 2%;
     }
   }
   &.data-entry {}
   &.design-layout {
-    @media screen and (min-width: 501px) {
+    @media screen and (min-width:1201px) {
       margin-left: 2%;
     }
   }
@@ -29,7 +29,7 @@
   position: relative;
   text-align: center;
   @include box-sizing(border-box);
-  @media screen and (max-width:500px) {
+  @media screen and (max-width:1200px) {
     text-align: right;
   }
   h2 {
@@ -38,7 +38,7 @@
     margin-bottom: $size/5;
     text-transform: uppercase;
     white-space: nowrap;
-    @media screen and (max-width:500px) {
+    @media screen and (max-width:1200px) {
       text-align: left
     }
   }
@@ -48,7 +48,7 @@
   i {
     font-size: $size*1.5;
     margin: $size/5 0;
-    @media screen and (max-width:500px) {
+    @media screen and (max-width:1200px) {
       display: none;
     }
   }
@@ -61,29 +61,29 @@
   p {
     color: $gray;
     margin-bottom: $size;
-    @media screen and (min-width:501px) {
+    @media screen and (min-width:1201px) {
       height: $size * 2.7;
       line-height: $size * 0.9;
     }
-    @media screen and (max-width:500px) {
+    @media screen and (max-width:1200px) {
       margin-bottom: 0;
     }
   }
   h2, p {
-    @media screen and (max-width:500px) {
+    @media screen and (max-width:1200px) {
       max-width: 50%;
       text-align: left;
     }
   }
   .button, .button+span {
-    @media screen and (max-width:500px) {
+    @media screen and (max-width:1200px) {
       position: absolute;
       right: 1.75em;
       top: 1.75em;
     }
   }
   .button+span {
-    @media screen and (max-width:500px) {
+    @media screen and (max-width:1200px) {
       clear: right;
       right: 3.5em;
       top: 8em;
@@ -165,7 +165,7 @@
     font-size: $size/2;
     text-transform: uppercase;
   }
-  @media screen and (max-width:500px) {
+  @media screen and (max-width:1200px) {
     p {
       float: right;
       width: 33.333%;
