--- a/imports/host/_header.scss
+++ b/imports/host/_header.scss
@@ -54,7 +54,8 @@
     @include box-sizing(border-box);
     &.big {
       display: block;
-      padding: $size/1.6 $size*2 $size/1.6 $size/1.4;
+      margin-bottom: $size/2;
+      padding: $size/1.6 $size $size/1.6 $size/1.4;
     }
     &.small {
       display: none;
@@ -92,7 +93,7 @@
     left: 0;
     position: absolute;
     top: 0;
-    width: 200px;
+    width: $sub-nav;
   }
   @media screen and (max-width:500px) {
     background: darken($blue, 10%);
