--- a/imports/host/_layout.scss
+++ b/imports/host/_layout.scss
@@ -99,7 +99,7 @@ body[class^="styleguide-"], body[class*="styleguide-"] {
 	}
 	@media screen and (min-width: 501px) {
     height: 100%;
-		margin-left: 200px;
+		margin-left: $sub-nav;
 		margin-right: 400px;
 
 		.content {
@@ -123,7 +123,9 @@ body[class^="styleguide-"], body[class*="styleguide-"] {
 		}
 	}
 	&.editor {
-	  @media screen and (min-width: 1400px) { margin-right: 600px; }
+    @media screen and (min-width: 801px) { margin-right: 300px; }
+    @media screen and (min-width: 1001px) { margin-right: 400px; }
+	  @media screen and (min-width: 1401px) { margin-right: 600px; }
 	  @media screen and (min-width: 1681px) { margin-right: 800px; }
 	  @media screen and (min-width: 1921px) { margin-right: 1000px; }
 	}
