--- a/imports/host/_nav.scss
+++ b/imports/host/_nav.scss
@@ -8,7 +8,7 @@
 		color: #fff;
 		display: block;
 		line-height: 20px;
-		padding: .9em 1.6em;
+		padding: .7em 1.6em;
 		position: relative;
 		text-decoration: none;
 		z-index: 2;
@@ -36,7 +36,7 @@
 		}
 	}
 	i {
-		font-size: 20px;
+		font-size: 18px;
 	}
 	>ul {
 		position: relative;
