--- a/imports/host/_rte.scss
+++ b/imports/host/_rte.scss
@@ -14,6 +14,12 @@
       width: auto;
     }
   }
+  .toolbar {
+    @include pie-clearfix;
+    > div {
+      float: left;
+    }
+  }
 }
 
 .rte-form {
@@ -21,6 +27,9 @@
     .input, .button {
       margin-top: 0;
       margin-bottom: 0;
+    }
+    .input-message {
+      top: 0;
     }
   }
 }
