--- a/imports/host/_variables.scss
+++ b/imports/host/_variables.scss
@@ -19,7 +19,7 @@ $gray05: rgba($gray,0.5);
 // Width
 
 $nav: 60px;
-$sub-nav: 200px;
+$sub-nav: 180px;
 $size: 1.75em;
 $font-size: 13px;
 
